Opened 12 years ago
Closed 9 years ago
#9439 closed bug (fixed)
Cannot connect demo video producer to video consumer window
Reported by: | jackburton | Owned by: | Barrett |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Cortex | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Start Cortex, instantiate a Demo video producer addon and a Video consumer window addon. Try to connect one to another.
Connection failed. (Bad media format)
Change History (2)
comment:1 by , 10 years ago
Owner: | set to |
---|---|
Status: | new → assigned |
comment:2 by , 9 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev50184.