VideoWindow consumer: Fix connection

* The integer overflowed for some reason.
* Fixes #9439.